# oauth-playground

./: Dockerfile  Makefile  README.md  pyproject.toml
src/: config.py  github.py  main.py
